; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/extr_debug.c_do_step_all.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/extr_debug.c_do_step_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pdb_cpu = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"step_all: missing arg\0A\00", align 1
@CMDRET_DONE = common dso_local global i32 0, align 4
@pdb_global_icount = common dso_local global i32 0, align 4
@CMDRET_CONT_DO_NEXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pdb_cpu*, i8*)* @do_step_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_step_all(%struct.pdb_cpu* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pdb_cpu*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca [32 x i8], align 16
  store %struct.pdb_cpu* %0, %struct.pdb_cpu** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = getelementptr inbounds [32 x i8], [32 x i8]* %6, i64 0, i64 0
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @get_arg(i8* %7, i32 32, i8* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* @CMDRET_DONE, align 4
  store i32 %13, i32* %3, align 4
  br label %18

14:                                               ; preds = %2
  %15 = getelementptr inbounds [32 x i8], [32 x i8]* %6, i64 0, i64 0
  %16 = call i32 @atoi(i8* %15)
  store i32 %16, i32* @pdb_global_icount, align 4
  %17 = load i32, i32* @CMDRET_CONT_DO_NEXT, align 4
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %11
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @get_arg(i8*, i32, i8*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
